@@ -45,9 +45,6 @@ except ImportError:
                 pass
         return string
 
-from acct_mgr.hashlib_compat  import md5
-
-
 _user_keys = {
     'auth_cookie': 'name',
     'permission': 'username',
@@ -77,10 +74,6 @@ class IPasswordStore(Interface):
 
     def has_user(self, user):
         """Returns whether the user account exists.
-        """
-
-    def has_email(self, address):
-        """Returns whether a user account with that email address exists.
         """
 
     def set_password(self, user, password, old_password = None):
@@ -205,92 +198,6 @@ class AccountManager(Component):
                 break
             continue
         return exists
-
-    def has_email(self, email):
-        """Returns whether a user account with that email address exists.
-
-        Check db directly - email addresses are not backend-specific.
-        """
-        exists = False
-        db = self.env.get_db_cnx()
-        cursor = db.cursor()
-        cursor.execute("""
-            SELECT value
-              FROM session_attribute
-             WHERE authenticated=1 AND name='email' AND value=%s
-            """, (email,))
-        for row in cursor:
-            exists = True
-            break
-        return exists
-
-    def email_verified(self, user, email):
-        """Returns whether the account and email has been verified.
-
-        Use with care, as it returns the private token string,
-        if verification is pending.
-        """
-        if (self.user_known(user) is False or
-               email is None) or email == '':
-            # nothing to check here
-            return None
-        db = self.env.get_db_cnx()
-        cursor = db.cursor()
-        cursor.execute("""
-            SELECT value
-              FROM session_attribute
-             WHERE sid=%s AND name='email_verification_sent_to'
-            """, (user,))
-        for row in cursor:
-            self.log.debug('AcctMgr:api:email_verify for user \"' + \
-                user + '\", email \"' + str(email) + '\": ' + str(row[0]))
-            if row[0] != email:
-                # verification has been sent to different email address
-                return None
-        cursor.execute("""
-            SELECT value
-              FROM session_attribute
-             WHERE sid=%s AND name='email_verification_token'
-            """, (user,))
-        for row in cursor:
-            # verification token still unverified
-            self.log.debug('AcctMgr:api:email_verify for user \"' + \
-                user + '\", email \"' + str(email) + '\": ' + str(row[0]))
-            return row[0]
-        return True
-
-    def user_known(self, user):
-        """Returns whether the user has ever been authenticated before.
-        """
-        db = self.env.get_db_cnx()
-        cursor = db.cursor()
-        cursor.execute("""
-            SELECT *
-              FROM session
-             WHERE authenticated=1 AND sid=%s
-            """, (user,))
-        for row in cursor:
-            return True
-        return False
-
-    def last_seen(self, user = None):
-        db = self.env.get_db_cnx()
-        cursor = db.cursor()
-        sql = """
-            SELECT sid,last_visit
-              FROM session
-             WHERE authenticated=1
-            """
-        if user:
-            sql += " AND sid=%s"
-            cursor.execute(sql, (user,))
-        else:
-            cursor.execute(sql)
-        # Don't pass over the cursor (outside of scope), only it's content.
-        res = []
-        for row in cursor:
-            res.append(row)
-        return not len(res) == 0 and res or None
 
     def set_password(self, user, password, old_password = None):
         user = self.handle_username_casing(user)
@@ -486,147 +393,3 @@ class AccountManager(Component):
         
     def user_email_verification_requested(self, user, token):
         self.log.info('Email verification requested user: %s' % user)
-
-
-def get_user_attribute(env, username=None, authenticated=1, attribute=None,
-                       value=None, db=None):
-    """Return user attributes."""
-    ALL_COLS = ('sid', 'authenticated', 'name', 'value')
-    columns = []
-    constraints = []
-    if username is not None:
-        columns.append('sid')
-        constraints.append(username)
-    if authenticated is not None:
-        columns.append('authenticated')
-        constraints.append(authenticated)
-    if attribute is not None:
-        columns.append('name')
-        constraints.append(attribute)
-    if value is not None:
-        columns.append('value')
-        constraints.append(value)
-    sel_columns = [col for col in ALL_COLS if col not in columns]
-    if len(sel_columns) == 0:
-        # No variable left, so only COUNTing is as a sensible task here. 
-        sel_stmt = 'COUNT(*)'
-    else:
-        if 'sid' not in sel_columns:
-            sel_columns.append('sid')
-        sel_stmt = ','.join(sel_columns)
-    if len(columns) > 0:
-        where_stmt = ''.join(['WHERE ', '=%s AND '.join(columns), '=%s'])
-    else:
-        where_stmt = ''
-    sql = """
-        SELECT  %s
-          FROM  session_attribute
-        %s
-        """ % (sel_stmt, where_stmt)
-    sql_args = tuple(constraints)
-
-    db = _get_db(env, db)
-    cursor = db.cursor()
-    cursor.execute(sql, sql_args)
-    rows = cursor.fetchall()
-    if rows is None:
-        return {}
-    res = {}
-    for row in rows:
-        if sel_stmt == 'COUNT(*)':
-            return [row[0]]
-        res_row = {}
-        res_row.update(zip(sel_columns, row))
-        # Merge with constraints, that are constants for this SQL query.
-        res_row.update(zip(columns, constraints))
-        account = res_row.pop('sid')
-        authenticated = res_row.pop('authenticated')
-        # Create single unique attribute ID.
-        m = md5()
-        m.update(''.join([account, str(authenticated),
-                           res_row.get('name')]).encode('utf-8'))
-        row_id = m.hexdigest()
-        if account in res:
-            if authenticated in res[account]:
-                res[account][authenticated].update({
-                    res_row['name']: res_row['value']
-                })
-                res[account][authenticated]['id'].update({
-                    res_row['name']: row_id
-                })
-            else:
-                res[account][authenticated] = {
-                    res_row['name']: res_row['value'],
-                    'id': {res_row['name']: row_id}
-                }
-                # Create account ID for additional authentication state.
-                m = md5()
-                m.update(''.join([account,
-                                  str(authenticated)]).encode('utf-8'))
-                res[account]['id'][authenticated] = m.hexdigest()
-        else:
-            # Create account ID for authentication state.
-            m = md5()
-            m.update(''.join([account, str(authenticated)]).encode('utf-8'))
-            res[account] = {authenticated: {res_row['name']: res_row['value'],
-                                            'id': {res_row['name']: row_id}},
-                            'id': {authenticated: m.hexdigest()}}
-    return res
-
-def set_user_attribute(env, username, attribute, value, db=None):
-    """Set or update a Trac user attribute within an atomic db transaction."""
-    db = _get_db(env, db)
-    cursor = db.cursor()
-    sql = """
-        WHERE   sid=%s
-            AND authenticated=1
-            AND name=%s
-        """
-    cursor.execute("""
-        UPDATE  session_attribute
-            SET value=%s
-        """ + sql, (value, username, attribute))
-    cursor.execute("""
-        SELECT  value
-          FROM  session_attribute
-        """ + sql, (username, attribute))
-    if cursor.fetchone() is None:
-        cursor.execute("""
-            INSERT INTO session_attribute
-                    (sid,authenticated,name,value)
-            VALUES  (%s,1,%s,%s)
-            """, (username, attribute, value))
-    db.commit()
-
-def del_user_attribute(env, username=None, authenticated=1, attribute=None,
-                       db=None):
-    """Delete one or more Trac user attributes for one or more users."""
-    columns = []
-    constraints = []
-    if username is not None:
-        columns.append('sid')
-        constraints.append(username)
-    if authenticated is not None:
-        columns.append('authenticated')
-        constraints.append(authenticated)
-    if attribute is not None:
-        columns.append('name')
-        constraints.append(attribute)
-    if len(columns) > 0:
-        where_stmt = ''.join(['WHERE ', '=%s AND '.join(columns), '=%s'])
-    else:
-        where_stmt = ''
-    sql = """
-        DELETE
-        FROM    session_attribute
-        %s
-        """ % where_stmt
-    sql_args = tuple(constraints)
-
-    db = _get_db(env, db)
-    cursor = db.cursor()
-    cursor.execute(sql, sql_args)
-    db.commit()
-
-def _get_db(env, db=None):
-    return db or env.get_db_cnx()
